--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,7 @@ footer {
     color: var(--orange-at);
 }
 
-@media (max-height: 31.25em) and (min-width: 49.5em) {
-    body{
-        height: 50rem;
-    }
-}
-
-/* Small devices mx width 767px*/
+/* Small devices max width 767px*/
 @media (max-width: 49.5em) {
     html,
     body {
@@ -230,5 +224,57 @@ footer {
         position: fixed;
         text-align: center;
         margin-bottom: 1rem;
+    }
+}
+
+/* Adjusting fonts between min-width 520px and max-width 767px to stabilize layout*/
+@media (min-width: 32.5em) and (max-width: 49.5em) {
+    .details h1 {
+        font-size: 2.75rem;
+    }
+    .details p {
+        font-size: 1.25rem;
+    }
+    .stat {
+        font-size: var(--font-lg);
+    }
+}
+
+/* Adjusting layout between min-width 793px and  1024px */
+@media (min-width: 49.5em) and (max-width: 64em) {
+    .details {
+        padding: 1rem;
+        padding-left: 3rem;
+    }
+    .details h1 {
+        font-size: 2rem;
+    }
+    .details p {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+    .metrics {
+        margin-top: 3rem;
+        margin-bottom: 0;
+    }
+    .stat {
+        font-size: 1.75rem;
+    }
+     .graphic {
+        height: auto;
+     }
+    .group {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+/* Adjusting layout between min-width 1025px and max-width 1174px */
+@media (min-width: 60.1em) and (max-width: 73.37em) {
+    .details {
+        padding-top: 1rem;
+    }
+    .metrics {
+        margin-top: 2.15rem;
     }
 }
