--- a/styles.css
+++ b/styles.css
@@ -147,9 +147,10 @@ body {
 }
 
 footer {
-    position: fixed;
+    position: absolute;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    bottom: 1.5rem;
     height: 1.5rem;
     font-size: var(--font-sm);
     text-align: center; 
