--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,7 @@ body {
 }
 
 footer {
-    position: absolute;
-    left: 0;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 1.5rem;
