--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ body {
 .graphic img {
     width: 100%;
     height: auto;
+    display: block;
     position: relative;
     margin: 0;
     border-radius: 0 var(--corners) var(--corners) 0;
